add create order with kafka
