# orders-backend/api.yaml
@@ -88,6 +88,71 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "403":
           $ref: "#/components/responses/Forbidden"
+  /orders/kafka:
+    post:
+      tags:
+        - Orders
+      summary: Order a product
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - product_id
+                - quantity
+                - user_id
+              properties:
+                product_id:
+                  type: number
+                quantity:
+                  type: number
+                user_id:
+                  type: number
+              example:
+                product_id: 1
+                quantity: 3
+                user_id: 1
+      security:
+        - bearerAuth: []
+      responses:
+        "200":
+          description: Failed response
+          content:
+            application/json:
+              schema:
+                properties:
+                  success:
+                    type: boolean
+                  status:
+                    type: number
+                  message:
+                    type: string
+                example:
+                  success: false
+                  status: 200
+                  message: "Out of stock"
+        "201":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                properties:
+                  success:
+                    type: boolean
+                  status:
+                    type: number
+                  message:
+                    type: string
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+        "401":
+          $ref: "#/components/responses/Unauthorized"
+        "403":
+          $ref: "#/components/responses/Forbidden"
   
 components:
   schemas:
